serve root from ~/www

--- a/ansible/templates/nginx.conf.j2
+++ b/ansible/templates/nginx.conf.j2
@@ -33,9 +33,9 @@ http {
     #gzip  on;
 
     server {
-        listen  80;
+        listen   80;
         location / {
-            root   /data/www;
+            root   /home/ubuntu/www;
             index  index.html;
         }
     }
